src/test/deca/context/valid/test_init_compatible_boolean.deca
// Description:
//    Initialisation d'une variable de type boolean
//
// Resultats:
//
// Historique:
//    cree le 01/01/2024

{
   boolean state = true ;
}
