src/test/deca/context/invalid/wobj/test_opbool_int.deca
// Description:
//    Declaration
//
// Resultats:
//    Ligne 11: un ou deux des operandes n'est pas de type boolean
//
// Historique:
//    cree le 01/01/2024

{
   boolean state = true || 1 ;
}
